feat: cases filtration

--- a/src/scss/pages/game/_info.scss
+++ b/src/scss/pages/game/_info.scss
@@ -68,9 +68,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 89px 171px;
+    // padding: 89px 171px;
+    height: 200px;
+    width: 100%;
     background: rgba(0, 0, 0, 0.2);
     border-radius: 10px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 
   &__logo-text {
