--- a/src/scss/pages/projects/_projects.scss
+++ b/src/scss/pages/projects/_projects.scss
@@ -516,7 +516,7 @@
     background: #0d0d0d;
     border-radius: 10px;
     text-decoration: none;
-    gap: 160px;
+    // gap: 160px;
     transition: all 0.3s ease;
   }
 
