--- a/src/scss/pages/services/_catalog.scss
+++ b/src/scss/pages/services/_catalog.scss
@@ -358,7 +358,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 160px;
+    // gap: 160px;
     padding: 8px 20px;
     background: #0d0d0d;
     border-radius: 10px;
