--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -32,7 +32,10 @@
     -webkit-backdrop-filter: blur(6px);
     z-index: 1;
   }
-
+  &__form-brief {
+    width: 100%;
+    height: 100%;
+  }
   // Контейнер модалки
   &__container {
     position: relative;
