--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -103,6 +103,22 @@
       padding: 0 12px;
     }
   }
+  &__button-wrapper {
+    filter: drop-shadow(0 0 30px rgba(113, 82, 239, 0.55));
+    transition: filter 0.3s ease;
+
+    &:hover {
+      filter: drop-shadow(0 0 40px rgba(113, 82, 239, 0.75));
+    }
+
+    &:active {
+      filter: drop-shadow(0 0 20px rgba(113, 82, 239, 0.35));
+    }
+
+    @include mobile {
+      display: none !important;
+    }
+  }
 
   &__logo {
     display: flex;
