--- a/src/scss/pages/game/_about.scss
+++ b/src/scss/pages/game/_about.scss
@@ -74,12 +74,26 @@
     margin-bottom: 40px;
   }
 
+  
   // Кнопка
+  &__button-wrapper {
+    filter: drop-shadow(0 0 30px rgba(113, 82, 239, 0.55));
+    transition: filter 0.3s ease;
+    margin-bottom: 80px;
+
+    &:hover {
+      filter: drop-shadow(0 0 40px rgba(113, 82, 239, 0.75));
+    }
+
+    &:active {
+      filter: drop-shadow(0 0 20px rgba(113, 82, 239, 0.35));
+    }
+  }
+
   &__button {
     width: 180px;
     height: 50px;
     padding: 9px 30px;
-    margin-bottom: 80px;
   }
 
   // Бесконечный слайдер
