--- a/src/scss/pages/home/_about.scss
+++ b/src/scss/pages/home/_about.scss
@@ -267,12 +267,25 @@
     white-space: nowrap;
   }
 
+  &__button-wrapper {
+    filter: drop-shadow(0 0 30px rgba(113, 82, 239, 0.55));
+    transition: filter 0.3s ease;
+    margin-top: 20px;
+
+    &:hover {
+      filter: drop-shadow(0 0 40px rgba(113, 82, 239, 0.75));
+    }
+
+    &:active {
+      filter: drop-shadow(0 0 20px rgba(113, 82, 239, 0.35));
+    }
+  }
+
   // === КНОПКА ===
 
   &__button {
     width: 180px;
     height: 50px;
-    margin-top: 20px;
   }
 
   // === ДЕКОРАТИВНЫЕ ЭЛЕМЕНТЫ ===
