--- a/src/scss/pages/service-page/_hero.scss
+++ b/src/scss/pages/service-page/_hero.scss
@@ -101,8 +101,7 @@
     z-index: 10;
   }
 
-  // Кнопка
-  &__button {
+  &__button-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -111,6 +110,21 @@
     margin: 0 auto 100px;
     position: relative;
     z-index: 10;
+    filter: drop-shadow(0 0 30px rgba(113, 82, 239, 0.55));
+    transition: filter 0.3s ease;
+
+    &:hover {
+      filter: drop-shadow(0 0 40px rgba(113, 82, 239, 0.75));
+    }
+
+    &:active {
+      filter: drop-shadow(0 0 20px rgba(113, 82, 239, 0.35));
+    }
+  }
+  // Кнопка
+  &__button {
+    width: 100%;
+    height: 100%;
   }
 
   // Статистика
