--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -342,6 +342,7 @@
       max-width: 120px;
       line-height: 1.22;
       margin-top: 7px;
+      text-wrap: nowrap;
     }
 
     &__scroll-top {
