--- a/src/scss/pages/projects/_projects.scss
+++ b/src/scss/pages/projects/_projects.scss
@@ -628,7 +628,7 @@
 
     &__button {
       padding: 7px 18px;
-      gap: 120px;
+      // gap: 120px;
     }
 
     &__name {
@@ -653,7 +653,7 @@
 
     &__button {
       padding: 8px 20px;
-      gap: 160px;
+      // gap: 160px;
       border-radius: 10px;
     }
 
