--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -4,9 +4,11 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
+  overflow-x: hidden;
   background-color: var(--black-100);
   color: var(--white-100);
   font-family: var(--font-family);
