--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -38,3 +38,10 @@
 .flex-center {
 	justify-content: center;
 }
+.full-width-link {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
